--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d dist"
+    "build": "webpack"
+  }
   },
   "devDependencies": {
     "vite": "^2.8.0"
