--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "project2",
-  "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "webpack"
-  }
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.8.0"
+    "vite": "^2.7.2"
   },
   "dependencies": {
-    "three": "^0.138.3",
-    "gh-pages": "^3.2.0"
+    "three": "^0.137.5"
   }
-  
 }
-
