--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.7.2"
+    "vite": "^2.3.0"
   },
   "dependencies": {
-    "three": "^0.137.5"
+    "three": "^0.128.0"
   }
 }
